fixed SignIn & SignUp layout issue for Client-app

--- a/Client-app/src/components/SignUp/SignUp.css
+++ b/Client-app/src/components/SignUp/SignUp.css
@@ -44,6 +44,14 @@ fieldset {
   color: var(--text-primary) !important;
 }
 
-.SIGN-UP__link:hover, .SIGN-IN__link:hover {
+.SIGN-UP__link:hover,
+.SIGN-IN__link:hover {
   color: var(--text-primary) !important;
+}
+
+.css-nosrnw {
+  margin-top: 0 !important;
+  margin-bottom: 100px;
+  padding: 50px 10%;
+  height: 100vh;
 }
